chore: change maven wrapper